--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,3 +1,78 @@
 <resources>
     <string name="app_name">Alma55</string>
+
+    <string name="empty_userName_tv">"הכנס שם משתמש או שם פרטי"</string>
+    <string name="empty_nickName_tv">"הכנס כינוי או שם משפחחה"</string>
+
+
+    <string name="content_description">image</string>
+    <string name="title_login">LOGIN</string>
+    <string name="et_hint_email_id">Email ID</string>
+    <string name="et_hint_password">Password</string>
+    <string name="lbl_forgot_password">אם שכחת את הסיסמה, לחץ פה ...</string>
+    <string name="btn_lbl_login">Login</string>
+    <string name="don_t_have_an_account">Don\'t have an account?</string>
+
+
+    <string name="create_an_account">CREATE AN ACCOUNT</string>
+    <string name="hint_last_name">Last name</string>
+    <string name="hint_first_name">First name</string>
+    <string name="et_hint_confirm_password">Confirm Password</string>
+    <string name="btn_lbl_register">Register</string>
+
+    <string name="please_wait">Please wait&#8230;</string>
+
+    <string name="already_have_an_account">Already have an account?</string>
+    <string name="login"><u>Login</u></string>
+
+    <string name="register"><u>Register</u></string>
+
+
+    <string name="i_agree_to_the_terms_and_condition">I Agree To The <u> Terms &amp; Condition </u></string>
+
+    <string name="title_forgot_password">FORGOT PASSWORD?</string>
+    <string name="forgot_password_title_description">Enter your username and e-mail address we\'ll send you a email to reset your password</string>
+    <string name="btn_lbl_submit">Submit</string>
+
+    <string name="email_sent_success">\"Email sent successfully to reset your password! \"</string>
+
+    <string name="err_msg_enter_first_name">לא הכנסת שם משתמש...</string>
+    <string name="err_msg_enter_last_name">לא הכנסת כינוי  ...</string>
+    <string name="err_msg_enter_email">לא הכנסת כתובת מייל ...</string>
+    <string name="err_msg_enter_password">לא הכנסת סיסמה ....</string>
+    <string name="err_msg_enter_confirm_password">לא אישרת את הסיסמא ...</string>
+    <string name="err_msg_password_and_confirm_password_mismatch">הסיסמה והאישור סיסמה לא תואמים, נס שוב...</string>
+    <string name="err_msg_agree_terms_and_condition">חביבי אתה צריך לאשר שאתה קצת שרוט ...</string>
+
+    <string name="register_success">ההרשמה שלך הצליחה, ברכות להצטופות לכנופיה.</string>
+
+    <string name="title_complete_profile">COMPLETE PROFILE</string>
+    <string name="et_hint_mobile_number">Mobile Number</string>
+
+    <string name="rb_lbl_male">MALE</string>
+    <string name="rb_lbl_female">FEMALE</string>
+    <string name="btn_lbl_save">Save</string>
+
+    <string name="read_storage_permission_denied">Oops, you just denied the permission for storage. You can also allow it from settings.</string>
+    <string name="image_selection_failed">Image selection Failed!</string>
+
+    <string name="err_msg_enter_mobile_number">Please enter mobile number.</string>
+
+    <string name="msg_profile_update_success">Your profile is updated successfully.</string>
+    <string name="title_activity_dashboard">DashboardActivity</string>
+    <string name="title_home">Home</string>
+    <string name="title_dashboard">Dashboard</string>
+    <string name="title_notifications">Notifications</string>
+
+    <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="please_click_back_again_immidiatly_to_exit">Please click back again to exit.</string>
+
+    <string name="title_settings">SETTINGS</string>
+    <string name="lbl_edit">Edit</string>
+    <string name="lbl_addresses">Addresses</string>
+    <string name="btn_lbl_logout">Logout</string>
+
+
+    <string name="title_edit_profile">EDIT PROFILE</string>
 </resources>
